// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageNavigator > renders the horizontal strip without page count header 1`] = `
<div>
  <button
    class="relative shrink-0 rounded border p-0.5 transition-colors border-white/[0.06] hover:border-slate-500"
    style="width: 56px;"
  >
    <img
      alt="Page 1"
      class="w-full rounded"
      loading="lazy"
      src="/api/test/pages/1/tile?dpi=72"
    />
    <span
      class="absolute bottom-0.5 left-0.5 rounded bg-black/60 px-1 text-[9px] text-white"
    >
      1
    </span>
  </button>
  <button
    class="relative shrink-0 rounded border p-0.5 transition-colors border-blue-500 ring-2 ring-blue-500/30"
    style="width: 56px;"
  >
    <img
      alt="Page 2"
      class="w-full rounded"
      loading="lazy"
      src="/api/test/pages/2/tile?dpi=72"
    />
    <span
      class="absolute bottom-0.5 left-0.5 rounded bg-black/60 px-1 text-[9px] text-white"
    >
      2
    </span>
  </button>
</div>
`;

exports[`PageNavigator > renders the vertical list with page count header 1`] = `
<div
  class="flex flex-col gap-1 overflow-y-auto p-2"
>
  <div
    class="mb-1 text-xs font-medium text-muted-foreground"
  >
    Pages (
    3
    )
  </div>
  <button
    class="relative rounded border p-0.5 transition-colors border-primary ring-2 ring-primary/30"
  >
    <img
      alt="Page 1"
      class="w-full rounded"
      loading="lazy"
      src="/api/test/pages/1/tile?dpi=72"
    />
    <span
      class="absolute bottom-0.5 left-0.5 rounded bg-black/60 px-1 text-[10px] text-white"
    >
      1
    </span>
  </button>
  <button
    class="relative rounded border p-0.5 transition-colors border-border hover:border-primary/50"
  >
    <img
      alt="Page 2"
      class="w-full rounded"
      loading="lazy"
      src="/api/test/pages/2/tile?dpi=72"
    />
    <span
      class="absolute bottom-0.5 left-0.5 rounded bg-black/60 px-1 text-[10px] text-white"
    >
      2
    </span>
  </button>
  <button
    class="relative rounded border p-0.5 transition-colors border-border hover:border-primary/50"
  >
    <img
      alt="Page 3"
      class="w-full rounded"
      loading="lazy"
      src="/api/test/pages/3/tile?dpi=72"
    />
    <span
      class="absolute bottom-0.5 left-0.5 rounded bg-black/60 px-1 text-[10px] text-white"
    >
      3
    </span>
  </button>
</div>
`;
